Removed border from footer/content. There seems to be some sort of box-model issue that results in a two-pixel overlap. It was easier just to take out the border.

--- a/public_html/css/cognosante.css
+++ b/public_html/css/cognosante.css
@@ -34,8 +34,6 @@ div.wsb-canvas.body {
 }
 
 #cognosante-content {
-  border: 1px solid #E5E5E5;
-  border-radius: 10px;
   padding-bottom: 200px;
 }
 
